--- a/style.css
+++ b/style.css
@@ -1,17 +1,18 @@
 body {
     display: flex;
-    border: solid 1px;
     justify-content: center;
-    padding: 100px;
+    padding: 200px;
+    background-color:blanchedalmond
 
 }
 
 #container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    border: solid 1px black;
-    width: 250px;
+    border: solid 20px black;
+    border-radius: 15px;
     grid-gap: 15px;
+    background-color: black;
     grid-template-areas:
         "header header header header"
         "AC AC first sidebar"
@@ -24,10 +25,11 @@ body {
 
 .display {
     grid-area: header;
-    height: 50px;
-    font-size: 50px;
-    height: 100px;
-    
+    font-size: 30px;
+    height: 75px;
+    background-color: rgba(226, 226, 226, 0.87);
+    text-align: right;
+    border-radius: 5px;
 }
 
 .all-clear {
@@ -60,4 +62,8 @@ body {
 
 #divide #multiply #subtract #add {
     grid-area: sidebar;
+}
+
+button {
+    border-radius: 5px;
 }
